src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ActiveLiveAgentUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveLiveAgentUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_Pool__c</fullName>
        <label>Candidate Pool</label>
        <picklist>
            <picklistValues>
                <fullName>Product Management - level I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management - level II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Engineer - level I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Engineer - level II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager - level I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java Programmer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employer</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_time__c</fullName>
        <label>Decision time frame</label>
        <picklist>
            <picklistValues>
                <fullName>Immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 6 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desire_to_Relocate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desire to Relocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hire__c</fullName>
        <label>Hire Status</label>
        <picklist>
            <picklistValues>
                <fullName>Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold for another position</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owns_Patents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owns Patents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <formula>IF( Total_Score__c &lt; 0.20, IMAGE(&apos;/resource/Quality_Star/1star.png&apos;, &apos;one&apos;,30, 120),
IF( Total_Score__c &lt; 0.40, IMAGE(&apos;/resource/Quality_Star/2star.png&apos;, &apos;two&apos;,30, 120),
IF( Total_Score__c &lt; 0.60, IMAGE(&apos;/resource/Quality_Star/3star.png&apos;, &apos;three&apos;,30, 120),
IF( Total_Score__c &lt; 0.80, IMAGE(&apos;/resource/Quality_Star/4star.png&apos;, &apos;four&apos;,30, 120),
IMAGE(&apos;/resource/Quality_Star/5star.png&apos;, &apos;five&apos;,30, 120)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrer</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rehire__c</fullName>
        <label>Rehire?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presented to Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted by Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Hire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>(IF( Potential_Candidate__c , 1, 0) *  $Setup.CandidateRating__c.potential__c) +
(IF( Desire_to_Relocate__c , 1, 0)  *  $Setup.CandidateRating__c.Relocate__c ) +
(IF( Employee_Referral__c , 1, 0)   *  $Setup.CandidateRating__c.Referral__c ) +
(IF( Willing_to_travel__c , 1, 0)   *  $Setup.CandidateRating__c.travel__c   ) +
(IF( Owns_Patents__c  , 1, 0)       *  $Setup.CandidateRating__c.Patents__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This is used by email templates to determine the instance that the Company Logo image is hosted on. It&apos;s required so that the image will render correctly when the email is received by the employee. The value of this field is the same for every Contact.</description>
        <formula>LEFT ($Api.Enterprise_Server_URL_350, 
FIND(&quot;/&quot;,$Api.Enterprise_Server_URL_350, 
FIND(&quot;.&quot;,$Api.Enterprise_Server_URL_350))-1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Willing_to_travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Willing to travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>employee_id__c</fullName>
        <externalId>true</externalId>
        <label>employee_id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>used for datapacks</description>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CandidateList</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Quality__c</columns>
        <columns>Willing_to_travel__c</columns>
        <columns>Stage__c</columns>
        <columns>Referrer__c</columns>
        <columns>Potential_Candidate__c</columns>
        <columns>Owns_Patents__c</columns>
        <columns>Decision_time__c</columns>
        <columns>Desire_to_Relocate__c</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Candidates</value>
        </filters>
        <label>Candidate List</label>
    </listViews>
    <listViews>
        <fullName>CandidatePoolPM</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Quality__c</columns>
        <columns>Candidate_Pool__c</columns>
        <columns>Stage__c</columns>
        <columns>Decision_time__c</columns>
        <columns>Current_Employer__c</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>Referrer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Candidate_Pool__c</field>
            <operation>equals</operation>
            <value>Product Management - level I,Product Management - level II</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Candidates</value>
        </filters>
        <label>Candidate Pool - Product Management</label>
    </listViews>
    <listViews>
        <fullName>CandidateSalesExec</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Quality__c</columns>
        <columns>Candidate_Pool__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Candidate_Pool__c</field>
            <operation>equals</operation>
            <value>Sales Executive</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Candidates</value>
        </filters>
        <label>Candidate Pool - Sales Executive</label>
    </listViews>
    <listViews>
        <fullName>CandidateSoftwareEngineers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Quality__c</columns>
        <columns>Candidate_Pool__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Candidate_Pool__c</field>
            <operation>equals</operation>
            <value>Software Engineer - level I,Software Engineer - level II</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Candidates</value>
        </filters>
        <label>Candidate Pool - Software Engineers</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>